# sim-skiresort-dataflow

./: .gitignore  Aufgabenstellung.txt  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: ci.yml
app/: main.c
docs/: original-assignment.md
include/: Bistro.h  Bus.h  BusStop.h  Car.h  CarPark.h  Clock.h  Gondola.h  Hotel.h  Input.h  Lift.h  LiftQueue.h  List.h  Node.h  Person.h  Queue.h  Resort.h  Simulation.h  Slope.h  Station.h
include/skiresort/: bistro.h  bus.h  bus_stop.h  car.h  car_park.h  domain.h  gondola.h  hotel.h  lift.h  lift_queue.h  list.h  node.h  person.h  probability.h  queue.h  resort.h  simulation.h  slope.h  station.h
source/: Bistro.c  Bus.c  BusStop.c  Car.c  CarPark.c  Clock.c  Gondola.c  Hotel.c  Input.c  Lift.c  LiftQueue.c  List.c  Node.c  Person.c  Probability.c  Queue.c  Resort.c  Simulation.c  Slope.c  Station.c
src/: bistro.c  bus.c  bus_stop.c  car.c  car_park.c  clock.c  gondola.c  hotel.c  input.c  lift.c  lift_queue.c  list.c  node.c  person.c  probability.c  queue.c  resort.c  simulation.c  slope.c  station.c
tests/: CMakeLists.txt  bistro_tests.c  bus_stop_tests.c  bus_tests.c  car_park_tests.c  car_tests.c  clock_tests.c  gondola_tests.c  hotel_tests.c  lift_queue_tests.c  lift_tests.c  list_tests.c  memory_tests.c  person_tests.c  probability_tests.c  queue_tests.c  schedule_tests.c  slope_tests.c  station_tests.c
